Mais ajustes no carnê+++

--- a/projeto/emprestimo/templates/emprestimo_impress.html
+++ b/projeto/emprestimo/templates/emprestimo_impress.html
@@ -22,7 +22,7 @@
 		
         .document {
             margin: auto auto;
-            width: 256mm;
+            width: 216mm;
             height: 108mm;
             background-color: #fff;
         }
@@ -71,11 +71,11 @@
             font-size: 12px;
 			font-weight: bold;						
         }
-        .titleisrael {
+        .title2 {
             position: absolute;
             left: 0px;
             top: 0px;
-            font-size: 11px;
+            font-size: 13px;
             font-weight: normal;
         }        
         .text {
@@ -311,7 +311,7 @@
 					</td>
 					<td width="1px"></td>
 					<td colspan="5" rowspan="4">
-						<span class="titleisrael">&nbsp <b>INTRUÇÕES<br/><br/>
+						<span class="title2">&nbsp <b>INTRUÇÕES:<br/><br/>
 						&nbsp <b>MULTA DE R$: ${valor_multa} APÓS: ${dia}/${mes}/${ano}<br/>
 						&nbsp JUROS DE R$: ${valor_juros_dia} AO DIA<br/></b>
 						</span>				
@@ -469,7 +469,7 @@
 					</td>
 					<td width="1px"></td>
 					<td colspan="5" rowspan="4">
-						<span class="titleisrael">&nbsp Instruções<br/>
+						<span class="title2">&nbsp Instruções<br/>
 						&nbsp MULTA DE R$: ${valor_multa} APÓS: ${dia}/${mes}/${ano}<br/>
 						&nbsp JUROS DE R$: ${valor_juros_dia} AO DIA<br/>
 						</span>				
