pagamento de empreestimo funcionando

--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -2,6 +2,7 @@
 <!doctype html>
 <html lang="pt-br">
 {% load static %}
+{% load widget_tweaks %}
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -66,8 +67,6 @@
   <script type="text/javascript" src="{% static 'bootstrap/js/jquery.mask.min.js' %}"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> 
   <script src="https://raw.githubusercontent.com/igorescobar/jQuery-Mask-Plugin/master/src/jquery.mask.js"></script>
-
-  
   
   {% block js %}{% endblock js %}
 
