--- a/projeto/emprestimo/templates/emprestimo_form.html
+++ b/projeto/emprestimo/templates/emprestimo_form.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
-para estudar hoje
-https://felipefrizzo.github.io/post/form-inline-cbv/
+<!-- para estudar hoje
+https://felipefrizzo.github.io/post/form-inline-cbv/ -->
 
 {% load static %}
 {% load widget_tweaks %}
@@ -13,7 +13,7 @@ https://felipefrizzo.github.io/post/form-inline-cbv/
     {% if emprestimo %}
 
         <h1>Editar {{emprestimo.cliente}}</h1>
-        <form action="{% url 'emprestimo:emprestimo_edit' emprestimo.id %}" method="POST" novalidate>
+        <form action="{% url 'emprestimo:emprestimo_edit' emprestimo.pk %}" method="POST" novalidate>
 
     {% else %}    
 
@@ -21,8 +21,8 @@ https://felipefrizzo.github.io/post/form-inline-cbv/
         <form action="{% url 'emprestimo:emprestimo_add' %}" method="POST" novalidate>
 
     {% endif %}
-
     {% csrf_token %}
+
     <div class="row">
         <div class="col-sm-3">                    
             <div class="form-group" >                
@@ -79,8 +79,18 @@ https://felipefrizzo.github.io/post/form-inline-cbv/
             </div>            
         {% endif %} 
     </div>
-    <button type="submit" class="btn btn-success">Cadastrar</button>  
+    
+
+    {% if emprestimo %}
+
+        <a href="{% url 'emprestimo:emprestimo_pagamento_add' emprestimo.pk %}" class="btn btn-primary">Pagar</a>        
+    
+    {% else %}
+        <button type="submit" class="btn btn-success">Cadastrar</button>
+    {% endif %}
+    
     </form>
+
   
     <script>
         function prestacao1(){
