--- a/projeto/emprestimo/templates/emprestimo_list.html
+++ b/projeto/emprestimo/templates/emprestimo_list.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+
 <div class="class page-header">
     <h2>Lista de Emprestimos
         <span class="pull-right">
@@ -15,28 +16,28 @@
     
     {% if object_list %}
     
-        <table class="table table-striped">
-            <thead class="thead">
+        <table class="table table table-hover">
+            <thead class="thead-light">
                 <tr>
-                    <th>funcionario</th>                    
-                    <th>num_doc</th>                    
                     <th>cliente</th>                    
+                    <th>num_doc</th>                    
                     <th>valor_emprestado</th>                    
                     <th>qtd_parcelas</th>  
                     <th>Data do Emprestimo</th>  
+                    <th>funcionario</th>                    
                 </tr>
             </thead>
             <tbody>
                 {% for object in object_list  %}   
                 <tr>
-                    <td> 
-                        <a href="{{ object.get_absolute_url}}">{{object.funcionario}}</a> 
-                    </td> 
-                    <td>{{ object.num_doc }}</td>
                     <td>{{ object.cliente }}</td>
-                    <td>{{ object.valor_emprestado }}</td>
-                    <td>{{ object.qtd_parcelas }}</td>  
-                    <td>{{ object.data_emprestimo|date:"d/m/Y" }}</td>  
+                    <td style="text-align:center">{{ object.num_doc }}</td>
+                    <td style="text-align:right">{{ object.valor_emprestado }}</td>
+                    <td style="text-align:right">{{ object.qtd_parcelas }}x</td>  
+                    <td style="text-align:center">{{ object.data_emprestimo|date:"d/m/Y" }}</td>  
+                    <td style="text-align:center"> 
+                        <a href="{{ object.get_absolute_url}}" >Editar</a> 
+                    </td> 
                 </tr>
                 {% endfor %}
             </tbody>
