--- a/projeto/cliente/templates/cliente_list.html
+++ b/projeto/cliente/templates/cliente_list.html
@@ -2,6 +2,12 @@
 
 {% block content %}
 
+<style>
+    thead{
+        background-color: rgb(165, 165, 165);
+    }
+</style>
+
 <div class="class page-header">
     <h2>Lista de Clientes
         <span class="pull-right">
@@ -15,15 +21,13 @@
     
     {% if object_list %}
     
-        <table class="table table-striped">
-            <thead class="thead">
+    <table class="table table-striped table-hover">
+        <thead class="thead">
                 <tr>
                     <th>Nome</th>                    
                     <th>RG</th>
-                    <th>Data de Nascimento</th>
-                    <th>Anotações</th>                    
-                    <th>CPF</th>
-                    <th>Telefone</th>                    
+                    <th>Data de Nascimento</th>                                        
+                    <th>CPF</th>                                   
                 </tr>
             </thead>
             <tbody>
@@ -34,10 +38,8 @@
                         <!-- <a href="{% url 'cliente:cliente_detail' object.pk %}">{{object.nome}}</a> -->
                     </td>                                        
                     <td>{{ object.rg }}</td>
-                    <td>{{ object.data_nasc }}</td>
-                    <td>{{ object.anotacoes }}</td>                    
-                    <td>{{ object.cpf }}</td>
-                    <td>{{ object.num_telefone }}</td>    
+                    <td>{{ object.data_nasc }}</td>                                     
+                    <td>{{ object.cpf }}</td>                       
                 </tr>
                 {% endfor %}
             </tbody>
