--- a/projeto/emprestimo/templates/emprestimo_list.html
+++ b/projeto/emprestimo/templates/emprestimo_list.html
@@ -2,6 +2,77 @@
 
 {% block content %}
 
+<style>
+    thead{
+        background-color: rgb(165, 165, 165);
+    }
+    .button {
+        background-color: #4CAF50; /* Green */
+        border: none;
+        color: white;
+        padding: 3px 12px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 2px 0px;
+        transition-duration: 0.4s;
+        cursor: pointer;
+      }
+      
+      .button1 {
+        background-color: white; 
+        color: black; 
+        border: 2px solid #4CAF50;
+      }
+      
+      .button1:hover {
+        background-color: #4CAF50;
+        color: white;
+      }
+      
+      .button2 {
+        background-color: rgb(165, 165, 165); 
+        color: black; 
+        border: 2px solid #008CBA;
+      }
+      
+      .button2:hover {
+        background-color: #008CBA;
+        color: white;
+      }
+      
+      .button3 {
+        background-color: white; 
+        color: black; 
+        border: 2px solid #f44336;
+      }
+      
+      .button3:hover {
+        background-color: #f44336;
+        color: white;
+      }
+      
+      .button4 {
+        background-color: white;
+        color: black;
+        border: 2px solid #e7e7e7;
+      }
+      
+      .button4:hover {background-color: #e7e7e7;}
+      
+      .button5 {
+        background-color: white;
+        color: black;
+        border: 2px solid #555555;
+      }
+      
+      .button5:hover {
+        background-color: #555555;
+        color: white;
+      }
+</style>
+
 
 <div class="class page-header">
     <h2>Lista de Emprestimos
@@ -16,8 +87,8 @@
     
     {% if object_list %}
     
-        <table class="table table table-hover">
-            <thead class="thead-light">
+        <table class="table table-striped table-hover">
+            <thead class="thead">
                 <tr>
                     <th>cliente</th>                    
                     <th>num_doc</th>                    
@@ -36,8 +107,9 @@
                     <td style="text-align:right">{{ object.qtd_parcelas }}x</td>  
                     <td style="text-align:center">{{ object.data_emprestimo|date:"d/m/Y" }}</td>  
                     <td style="text-align:center"> 
-                        <a href="{{ object.get_absolute_url}}" >Editar</a> 
+                        <a href="{{ object.get_absolute_url}}" ><button class="button button2">Gerenciar</button></a> 
                     </td> 
+                    
                 </tr>
                 {% endfor %}
             </tbody>
