--- a/projeto/emprestimo/templates/emprestimo_list.html
+++ b/projeto/emprestimo/templates/emprestimo_list.html
@@ -2,91 +2,18 @@
 
 {% block content %}
 
-<style>
-    thead{
-        background-color: rgb(165, 165, 165);
-    }
-    .button {
-        background-color: #4CAF50; /* Green */
-        border: none;
-        color: white;
-        padding: 3px 12px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        margin: 2px 0px;
-        transition-duration: 0.4s;
-        cursor: pointer;
-      }
-      
-      .button1 {
-        background-color: white; 
-        color: black; 
-        border: 2px solid #4CAF50;
-      }
-      
-      .button1:hover {
-        background-color: #4CAF50;
-        color: white;
-      }
-      
-      .button2 {
-        background-color: rgb(165, 165, 165); 
-        color: black; 
-        border: 2px solid #008CBA;
-      }
-      
-      .button2:hover {
-        background-color: #008CBA;
-        color: white;
-      }
-      
-      .button3 {
-        background-color: white; 
-        color: black; 
-        border: 2px solid #f44336;
-      }
-      
-      .button3:hover {
-        background-color: #f44336;
-        color: white;
-      }
-      
-      .button4 {
-        background-color: white;
-        color: black;
-        border: 2px solid #e7e7e7;
-      }
-      
-      .button4:hover {background-color: #e7e7e7;}
-      
-      .button5 {
-        background-color: white;
-        color: black;
-        border: 2px solid #555555;
-      }
-      
-      .button5:hover {
-        background-color: #555555;
-        color: white;
-      }
-</style>
-
-
 <div class="class page-header">
-    <h2>Lista de Emprestimos
-        <span class="pull-right">
+    <h2>Lista de Emprestimos</h2>
+    
+        <!-- <span class="pull-right">
             <a href="{% url 'emprestimo:emprestimo_add' %}">
-                <button type="button" class="btn btn-primary">
+                <button type="button" class="button button2">
                     <span class="fa fa-plus"></span>Adicionar
                 </button>
             </a>
-        </span>
-    </h2>
+        </span> -->
     
     {% if object_list %}
-    
         <table class="table table-striped table-hover">
             <thead class="thead">
                 <tr>
@@ -95,16 +22,24 @@
                     <th>valor_emprestado</th>                    
                     <th>qtd_parcelas</th>  
                     <th>Data do Emprestimo</th>  
-                    <th>funcionario</th>                    
+                    <th style="text-align:center">
+                        <span >
+                            <a href="{% url 'emprestimo:emprestimo_add' %}">
+                                <button type="button" class="button button1">
+                                    Novo Emprestimo
+                                </button>
+                            </a>
+                        </span>
+                    </th>                    
                 </tr>
             </thead>
             <tbody>
                 {% for object in object_list  %}   
                 <tr>
-                    <td>{{ object.cliente }}</td>
+                    <td style="text-align:left">{{ object.cliente }}</td>
                     <td style="text-align:center">{{ object.num_doc }}</td>
-                    <td style="text-align:right">{{ object.valor_emprestado }}</td>
-                    <td style="text-align:right">{{ object.qtd_parcelas }}x</td>  
+                    <td style="text-align:center">{{ object.valor_emprestado }}</td>
+                    <td style="text-align:center">{{ object.qtd_parcelas }}x</td>  
                     <td style="text-align:center">{{ object.data_emprestimo|date:"d/m/Y" }}</td>  
                     <td style="text-align:center"> 
                         <a href="{{ object.get_absolute_url}}" ><button class="button button2">Gerenciar</button></a> 
