Template avalista introduzido-conpleto

--- a/projeto/core/templates/includes/nav.html
+++ b/projeto/core/templates/includes/nav.html
@@ -94,6 +94,7 @@ body {
   <a href="{% url 'core:index' %}" class="active">ESCTOP</a>
   <a href="{% url 'cliente:cliente_list' %}">Clientes</a>
   <a href="{% url 'emprestimo:emprestimo_list' %}">Empréstimos</a>
+  <a href="{% url 'cliente:avalista_add' %}">Avalista</a>
   
   
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
