--- a/projeto/emprestimo/templates/emprestimo_list.html
+++ b/projeto/emprestimo/templates/emprestimo_list.html
@@ -7,12 +7,12 @@
     <div class="float-right">
         <a href="{% url 'emprestimo:emprestimo_add' %}">
             <button type="button" class="button button1">
-                Novo Emprestimo
+                Novo Empréstimo
             </button>
         </a>       
     </div>
     <div>
-        <h2>Lista de Emprestimos</h2>
+        <h2>Lista de Empréstimos</h2>
     </div>
     
     {% if object_list %}
